--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: call
-          image: username/call:latest
+          image: 271153858532.dkr.ecr.ap-northeast-2.amazonaws.com/admin11-call:latest
           ports:
             - containerPort: 8080
           readinessProbe:
